--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
 
     <!-- Firestore -->
     <string name="collection_users">Users</string>
-    <string name="collection_user_locations">User Locations</string>
+    <string name="collection_restroom_locations">Restroom Locations</string>
     <string name="title_activity_menu">MenuActivity</string>
 
     <!-- API key -->
